Finalize homework 5 Discrete math

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "HW4_1.C": "cpp",
-        "HW5_1.C": "cpp"
+        "HW5_1.C": "cpp",
+        "ratio": "c"
     }
 }
